@@ -1,4 +1,5 @@
 Development
+    libgmtk - gmtk_media_player, remove usage of GFileMonitor, not needed
     Fix window resize problem Issue #467 again
     libgmtk - gmtk_media_player, gamma is not a command line option
     libgmtk - gmtk_media_player, add video attributes
